Caret blinks even when it's moving
Categories
(Core :: Web Painting, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox124 | --- | unaffected |
| firefox125 | --- | unaffected |
| firefox126 | + | verified |
People
(Reporter: tgnff242, Assigned: emilio)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:126.0) Gecko/20100101 Firefox/126.0
Steps to reproduce:
- Open a new tab.
- While focused on the urlbar, keep the space button pressed down.
Actual results:
Caret blinks while new spaces are added.
This affects almost every text field and it makes it difficult to edit/delete characters, since you don't know exactly where caret is while it's moving.
Expected results:
It shouldn't blink while it's moving.
Updated•1 year ago
|
Comment 1•1 year ago
|
||
Set release status flags based on info from the regressing bug 1887552
:emilio, since you are the author of the regressor, bug 1887552, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Updated•1 year ago
|
Comment 2•1 year ago
|
||
The bug is marked as tracked for firefox126 (nightly). We have limited time to fix this, the soft freeze is in 13 days. However, the bug still isn't assigned.
:bhood, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 3•1 year ago
|
||
This was erroneously dropped from:
https://hg.mozilla.org/integration/autoland/rev/eb9c99b1da2b59ad1888a9710a3d56652bdd850c#l1.146
Comment 5•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
I was able to replicate the issue on an affected Firefox Nightly build from 2024-03-27, using macOS 12.6.6, while following the steps described in Comment 0.
Verified as fixed on Firefox Beta 126.0b8, build ID 20240501022718, using macOS 12.6.6, Windows 11 and Ubuntu 22.04.
Caret is now visible while new spaces are added and is no longer blinking.
Description
•