Bug 1888311 - Add an erroneously dropped ResetBlinking() call. r=masayuki

This was erroneously dropped from:

  https://hg.mozilla.org/integration/autoland/rev/eb9c99b1da2b59ad1888a9710a3d56652bdd850c#l1.146

Differential Revision: https://phabricator.services.mozilla.com/D206136